<resources>
    <string name="app_name">Islami V2</string>
    <string name="this_is_the_background_image_for_the_intro_screen">This is the background image for the Intro Screen</string>
    <string name="the_image_of_the_mosque_logo_to_the_top_of_the_screen">the image of the mosque logo to the top of the screen</string>
    <string name="todo">TODO</string>
    <string name="image_logo">imgage logo</string>
    <string name="hello">Hello</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="john">John</string>
    <string name="chose_language">Chose Language</string>
    <string name="welcome_to_islami">Welcome To Islami</string>
    <string name="we_are_very_excited_to_have_you_in_our_community">We Are Very Excited To Have You In Our Community</string>
    <string name="reading_the_quran">Reading the Quran</string>
    <string name="read_and_your_lord_is_the_most_generous">Read, and your Lord is the Most Generous</string>
    <string name="bearish">Bearish</string>
    <string name="praise_the_name_of_your_lord_the_most_high">Praise the name of your Lord, the Most High</string>
    <string name="holy_quran_radio">Holy Quran Radio</string>
    <string name="you_can_listen_to_the_holy_quran_radio_through_the_application_for_free_and_easily">You can listen to the Holy Quran Radio through the application for free and easily</string>
    <string name="home">Home</string>
    <string name="quran">Quran</string>
    <string name="hadeth">Hadeth</string>
    <string name="sebha">Sebha</string>
    <string name="radio">Radio</string>
    <string name="time">Time</string>
    <string name="backgorund_image">Backgorund Image</string>
    <string name="sura_name">Sura Name</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="most_recent">Most Recent</string>
    <string name="suras_list">Suras List</string>
    <string name="search_using_word_in_hadeth">Search Using Word in Hadith</string>
    <string name="sebha_fragment_title">سَبِّحِ اسْمَ رَبِّكَ الأعلى</string>
</resources>